@@ -1,7 +1,4 @@
 # To Do
-- Add Contains validator to see if an item is in the container that we want to check!
-- Update Readme with new validators Identifier and Contains
-
 - Add boolean option to query if checked variable fulfills requirements?
 - Add type and bounds inspection for general iterator in decorators with iter()?
 - Add JustIterator to types?
