@@ -4,5 +4,7 @@ from .justlen import JustLen
 from .oneof import OneOf
 from .justcall import JustCall
 from .identifier import Identifier
+from .contains import Contains
 
-__all__ = ['NonEmpty', 'Limited', 'JustLen', 'OneOf', 'JustCall', 'Identifier']
+__all__ = ['NonEmpty', 'Limited', 'JustLen', 'OneOf',
+           'JustCall', 'Identifier', 'Contains']
